<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingTop="@dimen/_20sdp"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:paddingStart="@dimen/_4sdp"
            android:orientation="horizontal"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/appName"
                android:textColor="@color/black"
                android:visibility="gone"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/homeTab"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/webIcon"
                android:layout_width="@dimen/_25sdp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_search" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/topSearchBar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintStart_toEndOf="@id/webIcon"
                app:layout_constraintEnd_toStartOf="@+id/homeTab"
                android:layout_weight="1"
                android:background="@drawable/custom_design"
                android:hint="@string/enter_url"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:paddingHorizontal="@dimen/_8sdp"
                android:singleLine="true"
                android:textColorHint="@color/textColorHint" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/homeTab"
                android:visibility="gone"
                android:layout_width="@dimen/_40sdp"
                app:layout_constraintEnd_toStartOf="@+id/refreshBtn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_tabs_textview"
                android:text="@string/one"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_marginVertical="8dp"
                android:layout_marginHorizontal="4dp"
                tools:ignore="RedundantDescriptionCheck" />

            <ImageButton
                android:id="@+id/refreshBtn"
                android:layout_width="@dimen/_40sdp"
                app:layout_constraintEnd_toStartOf="@+id/goBtn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/refresh_btn"
                android:src="@drawable/ic_refresh"
                tools:ignore="RedundantDescriptionCheck" />

            <ImageButton
                android:id="@+id/goBtn"
                android:visibility="gone"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/go_btn"
                android:src="@drawable/ic_forward"
                tools:ignore="RedundantDescriptionCheck"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleY="0.5"
            android:visibility="gone" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomController"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomController"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomController"
        style="@style/NoRippleStyle"
        app:menu="@menu/bottom_menu"
        app:itemBackground="@color/transparent"
        app:itemVerticalPadding="@dimen/_9sdp"
        app:labelVisibilityMode="labeled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/settingBtn"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        app:lottie_rawRes="@raw/download"
        app:lottie_autoPlay="true"
        android:visibility="gone"
        app:lottie_loop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85"
        tools:ignore="RedundantDescriptionCheck" />


</androidx.constraintlayout.widget.ConstraintLayout >